--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,6 +76,7 @@ CurrentPosGridSize=3
 GridEnabled=False
 CurrentRotGridSize=6
 CameraSpeed=3
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/_Scenes/Bowling
@@ -98,7 +99,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/_GeneralUse/Pipes
+ContentBrowserTab1.SelectedPaths=/Game/ParticleEffects/Bowling
 None=======
 None=======
 None=======
@@ -2467,6 +2468,24 @@ BP_TargetPointClownBelly_C.Input=True
 BP_TargetPointClownBelly_C.Actor=True
 BP_TargetPointClownBelly_C.TransformCommon=True
 Maze_C.TransformCommon=True
+MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
+MaterialExpressionBumpOffset.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
+MaterialExpressionDepthFade.MaterialExpression=True
+MaterialExpressionParticleColor.MaterialExpression=True
+ParticleModuleRotation.Rotation=True
+ParticleModuleRotation.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2477,7 +2496,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object="\"Object.LightmassSettings\" "
+Object="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 None=======
 None=======
 None=======
@@ -2519,7 +2538,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
-ParticleModule="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
+ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume=
 PaperSpriteActor=
@@ -2544,8 +2563,8 @@ BP_Menu_RandomSpawnerVolume_C=
 BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 AudioComponent="\"Object.Tags.ComponentTags\" "
-ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleLight_Seeded="\"Object.RandomSeed.RandomSeedInfo\" \"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
 RotatingMovementComponent="\"Object.Tags.ComponentTags\" "
 MovementComponent="\"Object.Tags.ComponentTags\" "
@@ -2556,8 +2575,16 @@ PointLightComponent="\"Object.Tags.ComponentTags\" "
 LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
+ParticleModuleRotation="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleRotationBase="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Cascade.ModuleEditorColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/ParticleEffects/Bowling/Steam_PS.Steam_PS;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Menu.BP_Button_Menu;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/Maze.Maze;
 RecentlyPlaced=/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat;
@@ -2577,7 +2604,6 @@ RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_NormalMap.TileFloor1_
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_DisplacementMap.TileFloor1_DisplacementMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_AmbientOcclusionMap.TileFloor1_AmbientOcclusionMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1.TileFloor1;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye.brown_eye;
 None=======
 None=======
 None=======
@@ -3236,6 +3262,8 @@ AnimationEditor.LastCompileMethod=Unknown
 bUseUnsortedMenus=False
 bShowMobileStats=False
 bRealtimeMaterialViewport=False
+bRealtimeExpressionViewport=True
+bAlwaysRefreshAllPreviews=True
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -3332,6 +3360,8 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3669,9 +3699,12 @@ None=======
 /Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSoundSpotLightOn.AmbientSound_SoundCue=0
 /Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat=0
+/Game/ParticleEffects/Bowling/Steam_Material_Inst.Steam_Material_Inst=1
+/Game/ParticleEffects/Bowling/Steam_Material.Steam_Material=0
+/Game/ParticleEffects/Bowling/Steam_PS.Steam_PS=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [DetailCategoriesAdvanced]
 WorldSettings.Lightmass=True
@@ -3847,5 +3880,11 @@ LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [SurfaceSelection]
 PreserveScaleRatio=True
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
